Fixed the overlap among inventory navigation links in mobile view with flex layout.

--- a/kinventory/static/stylesheets/inventory_views/base.css
+++ b/kinventory/static/stylesheets/inventory_views/base.css
@@ -24,6 +24,7 @@ body{
 a.navbar_link{
     color: black;
     text-decoration: none;
+    margin: 0px;
 }
 
 a.navbar_link:hover{
@@ -55,6 +56,15 @@ nav#inventory_navigation{
         grid-column-start: 1;
         grid-column-end: 2;
     }
+}
+
+#navigation_links{
+    display: flex;
+    direction: row;
+    align-items: baseline;
+    flex-wrap: wrap;
+    row-gap: 2px;
+    column-gap: 10px;
 }
 
 #navbar_image{
